--- a/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
+++ b/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
@@ -1,4 +1,7 @@
-<h2 class="my-5">Lista Case</h2>
+<div class="d-flex containerBtnETitle align-items-center">
+  <h2 class="my-5 me-5 titleEasyHome">Lista Case</h2>
+  <app-modal-add-house />
+</div>
 <!--inizio SearchBar-->
 <nav class="navbar navbar-light bg-light rounded mb-4">
   <form class="d-flex">
