--- a/src/app/components/form-add-payment/form-add-payment.component.html
+++ b/src/app/components/form-add-payment/form-add-payment.component.html
@@ -1,4 +1,4 @@
-<h2 class="titleEasyHome my-5">Aggiungi un Pagamento per questa casa</h2>
+<h2 class="titleEasyHome my-5 t3">Aggiungi un Pagamento per questa casa</h2>
 <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
   <table>
     <thead>
