--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,2 +1,2 @@
-<div [id]="graphId" style="width: 30vw; height: 50vh"></div>
+<div [id]="graphId" class="sizeGrafh"></div>
 <h3 class="text-center">{{ title }}</h3>
