--- a/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
+++ b/src/app/sections-backoffice/section-show-houses-backoffice/section-show-houses-backoffice.component.html
@@ -1,3 +1,6 @@
+@if (loader) {
+<span class="loader"></span>
+}
 <div class="d-flex containerBtnETitle align-items-center">
   <h2 class="my-5 me-5 titleEasyHome">Lista Case</h2>
   <app-modal-add-house />
