--- a/src/app/components/card-house-user/card-house-user.component.html
+++ b/src/app/components/card-house-user/card-house-user.component.html
@@ -4,6 +4,7 @@
   routerLink="/homepage/houseDetails/{{ userHouse.id }}"
 >
   <img class="card-img-top" src="{{ userHouse.houseImg }}" alt="img_house" />
+
   <div class="info-card pt-2">
     <p><strong>Interno: </strong> {{ userHouse.interno }}</p>
     <p><strong>Piano: </strong> {{ userHouse.piano }}</p>
@@ -15,3 +16,74 @@
     <p *ngIf="!userHouse.user"><strong>Proprietario: </strong>nessuno</p>
   </div>
 </div>
+@if (isUserRole(ERole.ROLE_MANAGER)){
+<div
+  id="buttonInfo"
+  type="button"
+  class="btn btn-primary"
+  data-bs-toggle="modal"
+  data-bs-target="#exampleModal3"
+  class="editHouse"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    width="16"
+    height="16"
+    fill="currentColor"
+    class="bi bi-person-add"
+    viewBox="0 0 16 16"
+  >
+    <path
+      d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
+    />
+    <path
+      d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"
+    />
+  </svg>
+</div>
+
+<div
+  class="modal fade"
+  id="exampleModal3"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modifica Casa</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div>
+            <label for="user">Utente:</label>
+            <select class="form-select" formControlName="user">
+              <option selected></option>
+              <option [ngValue]="null">Nessuno</option>
+
+              <option *ngFor="let user of listUsers" [ngValue]="user.id">
+                {{ user.name }} {{ user.surname }}
+              </option>
+            </select>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          annulla
+        </button>
+        <button type="button" class="btn btn-primary">Salva</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+}
