--- a/src/app/components/form-add-payment/form-add-payment.component.css
+++ b/src/app/components/form-add-payment/form-add-payment.component.css
@@ -1,4 +1,4 @@
-h2 {
+.t3 {
   margin-left: 38%;
 }
 table {
@@ -34,13 +34,20 @@ textarea {
 
 /*media query mobile version*/
 @media only screen and (max-width: 767px) {
+  h2 {
+    margin-left: 0%;
+    text-align: center;
+  }
   table {
     width: 100vw;
     margin-left: 0px;
   }
   th,
   td {
-    padding: 5px;
+    padding: 0px;
     text-align: left;
+  }
+  td input {
+    width: 30px !important;
   }
 }
