--- a/src/app/pages/login-page/login-page.component.css
+++ b/src/app/pages/login-page/login-page.component.css
@@ -18,13 +18,19 @@
   color: var(--white-EasyHome);
   background-color: var(--blue-EasyHome);
   width: 30%;
-  height: 60%;
+  height: 75%;
   margin: auto;
   padding: 5%;
-  transform: translateY(30%);
+  transform: translateY(15%);
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 1.94);
   position: relative;
   z-index: 7;
+}
+#logoLogin {
+  position: relative;
+  z-index: 100;
+  width: 50px;
+  height: 50px;
 }
 #login form {
   position: relative;
