--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,8 +1,21 @@
 <section id="loginPage">
   <div id="veil">
+    @if (loader) {
+    <span class="loader"></span>
+    }
+
     <div id="login">
       <form [formGroup]="dataLoginForm" (ngSubmit)="onSubmit()">
-        <h2 class="text-center mb-4">EasyHome</h2>
+        <div class="d-flex flex-column align-items-center">
+          <img
+            id="logoLogin"
+            routerLink="/login"
+            src="/assets/logo2.png"
+            alt="alt_logo"
+          />
+          <h2 class="text-center mb-4">EasyHome</h2>
+        </div>
+
         <div>
           <label for="username">Username:</label>
           <br />
