--- a/src/app/sections-homepage/section-bacheca-user/section-bacheca-user.component.html
+++ b/src/app/sections-homepage/section-bacheca-user/section-bacheca-user.component.html
@@ -1,2 +1,5 @@
 <h2 class="mt-5 titleEasyHome">Bacheca</h2>
+@if (loader) {
+<span class="loader"></span>
+}
 <app-table-notification [notficationsList]="notifications" />
