--- a/src/app/sections-homepage/section-show-user-house-homepage/section-show-user-house-homepage.component.html
+++ b/src/app/sections-homepage/section-show-user-house-homepage/section-show-user-house-homepage.component.html
@@ -1,5 +1,8 @@
 <h2 class="mt-3 titleEasyHome my-5 pt-3">Le mie case</h2>
-<div class="d-flex">
+@if (loader) {
+<span class="loader"></span>
+}
+<div class="d-flex flex-wrap">
   @for (house of houses; track house.id) {
   <app-card-house-user class="m-2" [userHouse]="house" />
   } @if (message) {
